--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+spring.servlet.multipart.enabled=true
+spring.datasource.url=${MYSQL_DB_URL}
+spring.datasource.username=${MYSQL_DB_USERNAME}
+spring.datasource.password=${MYSQL_DB_PASSWORD}
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/blobdb
+# spring.datasource.username=test
+# pring.datasource.password=password
+
+spring.datasource.hikari.timeout=2000
+spring.datasource.hikari.maximumPoolSize=5
+
+db.storage.key=${DO_STORAGE_KEY}
+db.storage.secretkey=${DO_STORAGE_SECRETKEY}
+db.storage.endpoint=${DO_STORAGE_ENDPOINT}
+db.storage.endpoint.region=${DO_STORAGE_REGION}
+db.storage.endpoint.bucketname=${DO_STORAGE_BUCKETNAME}
